--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link rel="styleSheet" href="./style.css">
 		<meta charset="UTF-8">
 		<title>Clue</title>
 	</head>
@@ -8,96 +9,222 @@
 		<form>
 			<table>
 				<tr>
-					<td>¿QUIEN?</td>
+					<td><b>¿QUIEN?</b></td>
 				</tr>
 				<tr>
-					<td>Prado</td>
-					<td><input type="radio"></td>
+					<td><label for="prado">Prado</label></td>
+					<td><input type="radio" id="prado"></td>
+					<td><input type="radio" id="prado"></td>
+					<td><input type="radio" id="prado"></td>
+					<td><input type="radio" id="prado"></td>
+					<td><input type="radio" id="prado"></td>
+					<td><input type="radio" id="prado"></td>
+					<td><input type="radio" id="prado"></td>
 				</tr>
 				<tr>
 					<td>Rubio</td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
 					<td><input type="radio"></td>
 				</tr>
 				<tr>
 					<td>Orquidea</td>
 					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
 				</tr>
 				<tr>
 					<td>Celeste</td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
 					<td><input type="radio"></td>
 				</tr>
 				<tr>
 					<td>Mora</td>
 					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
 				</tr>
 				<tr>
 					<td>Amapola</td>
 					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
 				</tr>
 				<tr>
-					<td>¿QUE ARMA?</td>
+					<td><b>¿QUE ARMA?</b></td>
 				</tr>
 				<tr>
 					<td>Candelabro</td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
 					<td><input type="radio"></td>
 				</tr>
 				<tr>
 					<td>Puñal</td>
 					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
 				</tr>
 				<tr>
 					<td>Tuberia de plomo</td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
 					<td><input type="radio"></td>
 				</tr>
 				<tr>
 					<td>Pistola</td>
 					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
 				</tr>
 				<tr>
 					<td>Cuerda</td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
 					<td><input type="radio"></td>
 				</tr>
 				<tr>
 					<td>Herramineta</td>
 					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
 				</tr>
 				<tr>
-					<td>¿DÓNDE?</td>
+					<td><b>¿DÓNDE?</b></td>
 				</tr>
 				<tr>
 					<td>Sala de baile</td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
 					<td><input type="radio"></td>
 				</tr>
 				<tr>
 					<td>Sala de billar</td>
 					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
 				</tr>
 				<tr>
 					<td>Invernadero</td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
 					<td><input type="radio"></td>
 				</tr>
 				<tr>
 					<td>Comedor</td>
 					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
 				</tr>
 				<tr>
 					<td>Vestibulo</td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
 					<td><input type="radio"></td>
 				</tr>
 				<tr>
 					<td>Cocina</td>
 					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
 				</tr>
 				<tr>
 					<td>Biblioteca</td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
 					<td><input type="radio"></td>
 				</tr>
 				<tr>
 					<td>Salón</td>
 					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
 				</tr>
 				<tr>
 					<td>Estuio</td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
+					<td><input type="radio"></td>
 					<td><input type="radio"></td>
 				</tr>
 			</table>
