--- a/index.html
+++ b/index.html
@@ -230,5 +230,10 @@
 			</table>
 			<input type="reset">
 		</form>
+		<form>
+			<textarea name="notes" id="notes" cols="30" rows="10" placeholder="¿Quien sera el asesino?"></textarea>
+			<p><b>Nota: </b>puedes modificar el ancho de esta cagita =D</p>
+			<input type="reset"  value="Borrar" id="reset-textarea">
+		</form>
 	</body>
 </html>
