--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
 				</tr>
 				<tr>
 					<td><label for="prado">Prado</label></td>
-					<td><input type="radio" id="prado"></td>
-					<td><input type="radio" id="prado"></td>
-					<td><input type="radio" id="prado"></td>
-					<td><input type="radio" id="prado"></td>
-					<td><input type="radio" id="prado"></td>
-					<td><input type="radio" id="prado"></td>
-					<td><input type="radio" id="prado"></td>
+					<td><input type="checkbox" id="prado"></td>
+					<td><input type="checkbox" id="prado"></td>
+					<td><input type="checkbox" id="prado"></td>
+					<td><input type="checkbox" id="prado"></td>
+					<td><input type="checkbox" id="prado"></td>
+					<td><input type="checkbox" id="prado"></td>
+					<td><input type="checkbox" id="prado"></td>
 				</tr>
 				<tr>
 					<td>Rubio</td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
 				</tr>
 				<tr>
 					<td>Orquidea</td>
@@ -43,189 +43,189 @@
 				</tr>
 				<tr>
 					<td>Celeste</td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
 				</tr>
 				<tr>
 					<td>Mora</td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
 				</tr>
 				<tr>
 					<td>Amapola</td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
 				</tr>
 				<tr>
 					<td><b>¿QUE ARMA?</b></td>
 				</tr>
 				<tr>
 					<td>Candelabro</td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
 				</tr>
 				<tr>
 					<td>Puñal</td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
 				</tr>
 				<tr>
 					<td>Tuberia de plomo</td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
 				</tr>
 				<tr>
 					<td>Pistola</td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
 				</tr>
 				<tr>
 					<td>Cuerda</td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
 				</tr>
 				<tr>
 					<td>Herramineta</td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
 				</tr>
 				<tr>
 					<td><b>¿DÓNDE?</b></td>
 				</tr>
 				<tr>
 					<td>Sala de baile</td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
 				</tr>
 				<tr>
 					<td>Sala de billar</td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
 				</tr>
 				<tr>
 					<td>Invernadero</td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
 				</tr>
 				<tr>
 					<td>Comedor</td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
 				</tr>
 				<tr>
 					<td>Vestibulo</td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
 				</tr>
 				<tr>
 					<td>Cocina</td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
 				</tr>
 				<tr>
 					<td>Biblioteca</td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
 				</tr>
 				<tr>
 					<td>Salón</td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
 				</tr>
 				<tr>
 					<td>Estuio</td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
 				</tr>
 			</table>
 			<input type="reset">
