--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 				</tr>
 				<tr>
 					<td><label for="prado">Prado</label></td>
-					<td><input type="checkbox" id="prado"></td>
-					<td><input type="checkbox" id="prado"></td>
-					<td><input type="checkbox" id="prado"></td>
-					<td><input type="checkbox" id="prado"></td>
-					<td><input type="checkbox" id="prado"></td>
-					<td><input type="checkbox" id="prado"></td>
-					<td><input type="checkbox" id="prado"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
 				</tr>
 				<tr>
 					<td>Rubio</td>
@@ -33,13 +33,13 @@
 				</tr>
 				<tr>
 					<td>Orquidea</td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
-					<td><input type="radio"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
+					<td><input type="checkbox"></td>
 				</tr>
 				<tr>
 					<td>Celeste</td>
