--- a/index.html
+++ b/index.html
@@ -231,9 +231,8 @@
 			<input type="reset">
 		</form>
 		<form>
-			<textarea name="notes" id="notes" cols="30" rows="10" placeholder="¿Quien sera el asesino?"></textarea>
-			<p><b>Nota: </b>puedes modificar el ancho de esta cagita =D</p>
-			<input type="reset"  value="Borrar" id="reset-textarea">
+			<textarea name="notes" id="notes" cols="60" rows="50" placeholder="¿Quien sera el asesino?"></textarea>
+			<p><input type="reset"  value="Borrar" id="reset-textarea"></p>
 		</form>
 	</body>
 </html>
