--- a/index.html
+++ b/index.html
@@ -1,238 +1,42 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<link rel="styleSheet" href="./style.css">
-		<meta charset="UTF-8">
-		<title>Clue</title>
-	</head>
-	<body>
-		<form>
-			<table>
-				<tr>
-					<td><b>¿QUIEN?</b></td>
-				</tr>
-				<tr>
-					<td><label for="prado">Prado</label></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-				</tr>
-				<tr>
-					<td>Rubio</td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-				</tr>
-				<tr>
-					<td>Orquidea</td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-				</tr>
-				<tr>
-					<td>Celeste</td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-				</tr>
-				<tr>
-					<td>Mora</td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-				</tr>
-				<tr>
-					<td>Amapola</td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-				</tr>
-				<tr>
-					<td><b>¿QUE ARMA?</b></td>
-				</tr>
-				<tr>
-					<td>Candelabro</td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-				</tr>
-				<tr>
-					<td>Puñal</td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-				</tr>
-				<tr>
-					<td>Tuberia de plomo</td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-				</tr>
-				<tr>
-					<td>Pistola</td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-				</tr>
-				<tr>
-					<td>Cuerda</td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-				</tr>
-				<tr>
-					<td>Herramineta</td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-				</tr>
-				<tr>
-					<td><b>¿DÓNDE?</b></td>
-				</tr>
-				<tr>
-					<td>Sala de baile</td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-				</tr>
-				<tr>
-					<td>Sala de billar</td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-				</tr>
-				<tr>
-					<td>Invernadero</td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-				</tr>
-				<tr>
-					<td>Comedor</td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-				</tr>
-				<tr>
-					<td>Vestibulo</td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-				</tr>
-				<tr>
-					<td>Cocina</td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-				</tr>
-				<tr>
-					<td>Biblioteca</td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-				</tr>
-				<tr>
-					<td>Salón</td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-				</tr>
-				<tr>
-					<td>Estuio</td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-					<td><input type="checkbox"></td>
-				</tr>
-			</table>
-			<input type="reset">
-		</form>
-		<form>
-			<textarea name="notes" id="notes" cols="60" rows="50" placeholder="¿Quien sera el asesino?"></textarea>
-			<p><input type="reset"  value="Borrar" id="reset-textarea"></p>
-		</form>
-	</body>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <title>floatingMenu</title>
+    <link rel="stylesheet" href="./style.css">
+</head>
+<body>
+   <section id="register">
+        <div method="get" class="filter">
+            <h2>Registrate</h2>
+            <label for="name">Nombre:</label>
+            <input type="text" id="name">
+            <label for="lastName">Apellidos:</label>
+            <input type="text" id="lastName">
+            <label for="email">Correo Electronico</label>
+            <input type="email" id="email">
+            <label for="password">Contraseña:</label>
+            <input type="password" id="password">
+            <label for="passwordConfirm">Confirmar contraseña:</label>
+            <input type="password" id="passwordConfirm">
+            <label for="licence">He leido los <u>acuerdos de licencia</u> y estoy de acuerdo</label>
+            <input type="checkbox" id="licence">
+            <button id="send"><b>Enviar</b></button>
+            <button id="loginLink"><b>Ya tengo una cuenta</b></button>
+        </div>
+   </section>
+   
+   <section id="login">
+        <div class="filter">
+            <h2>Iniciar sesion</h2>
+            <label for="login-email">Correo Electronico</label>
+            <input type="email" id="login-email">
+            <label for="login-password">Contraseña:</label>
+            <input type="login-password" id="login-password">
+            <button id="send"><b>Enviar</b></button>
+            <button id="registerLink"><b>Soy nuevo por aqui</b></button>
+        </div>
+   </section>
+<script src="./script.js"></script>
+</body>
 </html>
